--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
             <li class="card">
                 <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
@@ -82,7 +82,7 @@
             <li class="card">
                 <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
@@ -90,7 +90,7 @@
             <li class="card">
                 <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
@@ -98,7 +98,7 @@
             <li class="card">
                 <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
@@ -106,7 +106,7 @@
             <li class="card">
                 <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
@@ -114,7 +114,7 @@
             <li class="card">
                 <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
@@ -122,7 +122,7 @@
             <li class="card">
                 <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
@@ -130,7 +130,7 @@
             <li class="card">
                 <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites"></a></p>
+                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
