--- a/catalog.html
+++ b/catalog.html
@@ -43,22 +43,26 @@
             <li>Перфораторы</li>
         </ul>
     </nav>
-    <section class="manufacturers">
-        <h2>Производители:</h2>
-        <ul class="manufacturers-list">
-            <li><input type="checkbox" class="checkbox-square">Bosch</li>
-            <li><input type="checkbox" class="checkbox-square">Интерскол</li>
-            <li><input type="checkbox" class="checkbox-square">Makita</li>
-            <li><input type="checkbox" class="checkbox-square">Dewalt</li>
-            <li><input type="checkbox" class="checkbox-square">Hitachi</li>
-        </ul>
-    </section>
-    <section class="power-type">
-        <h2>Питание:</h2>
-        <ul class="power-type-list">
-            <li><input type="checkbox" class="checkbox-round">Аккумуляторные</li>
-            <li><input type="checkbox" class="checkbox-round">Сетевые</li>
-        </ul>
+    <section class="filter-options">
+        <h2 class="filter visually-hidden">Фильтр</h2>
+        <section class="manufacturers">
+            <h3>Производители:</h3>
+            <ul class="manufacturers-list">
+                <li><input type="checkbox" class="checkbox-square">Bosch</li>
+                <li><input type="checkbox" class="checkbox-square">Интерскол</li>
+                <li><input type="checkbox" class="checkbox-square">Makita</li>
+                <li><input type="checkbox" class="checkbox-square">Dewalt</li>
+                <li><input type="checkbox" class="checkbox-square">Hitachi</li>
+            </ul>
+        </section>
+        <section class="power-type">
+            <h3>Питание:</h3>
+            <ul class="power-type-list">
+                <li><input type="checkbox" class="checkbox-round">Аккумуляторные</li>
+                <li><input type="checkbox" class="checkbox-round">Сетевые</li>
+            </ul>
+        </section>
+        <button class="show-products">Показать</button>
     </section>
     <section class="products">
         <h2 class="hidden">Товары</h2>
