--- a/catalog.html
+++ b/catalog.html
@@ -69,72 +69,72 @@
         <ul class="products">
             <li class="card">
                 <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
                 <p class="old-price">30500 Р.</p>
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
                 <p class="old-price"></p>
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
                 <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
-                <p class="add-to-cart"><a class="add-to-cart">Купить</a></p>
-                <p class="add-to-favorites"><a class="add-to-favorites">В закладки</a></p>
+                <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
+                <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
                 <p class="old-price">22500 Р.</p>
                 <p class="price">15500 Р.</p>
