--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
-    <div class="user-block"><a href="#">Равшан Джамшутович<img src="https://via.placeholder.com/20x18" alt="user avatar"></a></div>
+    <div class="user-block"><a href="#">Равшан Джамшутович<img src="img/icon-user.svg" alt="user avatar"></a></div>
         <ul class="user-menu">
             <li><a href="#">Мои заказы </a></li>
             <li><a href="#">Личный кабинет</a></li>
@@ -69,7 +69,7 @@
         <h2 class="hidden">Товары</h2>
         <ul class="products">
             <li class="card">
-                <img src="http://placehold.it/150x100" class="product-item-pic" alt="product picture">
+                <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
