--- a/catalog.html
+++ b/catalog.html
@@ -10,14 +10,14 @@
 <header>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
-        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
+        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47">Логотип Техномарт</a>
         <div class="search"></div>
     </div>
     <div class="address-top">
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     </div>
-    <div class="user-block"><a href="#">Равшан Джамшутович<img src="img/icon-user.svg" alt="user avatar"></a></div>
+    <div class="user-block"><a href="#">Равшан Джамшутович<img src="img/icon-user.svg" alt="user avatar" width="20" height="18"></a></div>
         <ul class="user-menu">
             <li><a href="#">Мои заказы </a></li>
             <li><a href="#">Личный кабинет</a></li>
@@ -70,7 +70,7 @@
         <h2 class="hidden">Товары</h2>
         <ul class="products">
             <li class="card">
-                <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item1.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -78,7 +78,7 @@
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item2.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -86,7 +86,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item3.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -94,7 +94,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item1.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -102,7 +102,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item2.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -110,7 +110,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item3.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -118,7 +118,7 @@
                 <p class="price">15500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item1.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item1.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 6000</h3>
@@ -126,7 +126,7 @@
                 <p class="price">25500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item2.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item2.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 2000</h3>
@@ -134,7 +134,7 @@
                 <p class="price">12500 Р.</p>
             </li>
             <li class="card">
-                <img src="img/item3.jpg" class="product-item-pic" alt="product picture">
+                <img src="img/item3.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
                 <p class="add-to-cart"><button class="add-to-cart">Купить</button></p>
                 <p class="add-to-favorites"><button class="add-to-favorites">В закладки</button></p>
                 <h3>Перфоратор Bosch BFG 3000</h3>
@@ -146,7 +146,7 @@
 </main>
 
 <footer>
-    <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
+    <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68">Логотип Техномарт</a>
     <ul class="main-menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
