--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
-        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
+        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47">Логотип Техномарт</a>
         <div class="search"></div>
       </div>
       <div class="address-top">
@@ -55,7 +55,7 @@
     </main>
 
     <footer>
-      <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo">Логотип Техномарт</a>
+      <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68">Логотип Техномарт</a>
         <ul class="main-menu">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
