--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
-        <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47">Логотип Техномарт</a>
+        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47"><p class="visually-hidden">Логотип Техномарт</p></a>
         <div class="search"></div>
     </div>
     <div class="address-top">
@@ -146,7 +146,7 @@
 </main>
 
 <footer>
-    <a href="index.html" class="visually-hidden"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68">Логотип Техномарт</a>
+    <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68"><p class="visually-hidden">Логотип Техномарт</p></a>
     <ul class="main-menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
