--- a/catalog.html
+++ b/catalog.html
@@ -14,6 +14,8 @@
         <form action="catalog.html" method="get">
             <input type="search" name="search">
         </form>
+        <a href="#" class="favorites">Закладки: 0</a>
+        <a href="#" class="cart">Корзина: 0</a>
     </div>
     <div class="address-top">
         <div class="phone-number"><p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p></div>
