--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
-        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47"><p class="visually-hidden">Логотип Техномарт</p></a>
+        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47"></a>
         <form action="catalog.html" method="get">
           <input type="search" name="search">
         </form>
@@ -59,7 +59,7 @@
     </main>
 
     <footer>
-      <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68"><p class="visually-hidden">Логотип Техномарт</p></a>
+      <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68"></a>
         <ul class="main-menu">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
