--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <div class="top-section">
         <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47"></a>
         <form action="catalog.html" method="get">
-          <input type="search" name="search">
+          <label for="search-field">Поиск</label>
+          <input type="search" name="search" id="search-field">
         </form>
         <a href="#" class="favorites">Закладки: 0</a>
         <a href="#" class="cart">Корзина: 0</a>
