--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
     </header>
 
     <main>
+
+      <section class="offers">
+        <h2>Предложения</h2>
+        <div class="materials"><p>Материалы <br></p><p class="feature">На любой вкус</p></div>
+        <div class="tool"><p>Инструмент <br></p><p class="feature">На все случаи</p></div>
+        <div class="technics"><p>Техника <br></p><p class="feature">Для стройки</p></div>
+        <div class="discounts"><p>Скидки <br></p><p class="feature">На 350 товаров</p></div>
+        <div class="delivery"><p>Доставка <br></p><p class="feature">Бесплатно</p></div>
+        <div class="slider">
+          <p>Дрели <br></p><p class="feature">Соседям на радость!</p><a href="#">Открыть каталог</a>
+          <button type="button">Вперёд</button><button type="button">Назад</button>
+        </div>
+      </section>
+
+      <section class="popular-products">
+        <h2>Популярные продукты</h2>
+      </section>
+
+      <section class="popular-manufacturers">
+        <h2>Популярные производители</h2>
+      </section>
+
+      <section class="services">
+        <h2>Сервисы</h2>
+      </section>
+      
       <section>
         <h2>Компания «Техномарт»</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
