--- a/index.html
+++ b/index.html
@@ -55,7 +55,42 @@
       </section>
 
       <section class="popular-products">
-        <h2>Популярные продукты</h2>
+        <h2>Популярные товары</h2>
+        <a href="#">Все популярные товары</a>
+        <ul>
+          <li class="card">
+            <img src="img/item4.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
+            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
+            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <h3>Перфоратор Bosch BFG 9000</h3>
+            <p class="old-price">32500 Р.</p>
+            <p class="price">25500 Р.</p>
+          </li>
+          <li class="card">
+            <img src="img/item1.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
+            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
+            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <h3>Перфоратор Bosch BFG 3000</h3>
+            <p class="old-price">22500 Р.</p>
+            <p class="price">15500 Р.</p>
+          </li>
+          <li class="card">
+            <img src="img/item2.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
+            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
+            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <h3>Перфоратор Bosch BFG 6000</h3>
+            <p class="old-price">30500 Р.</p>
+            <p class="price">25500 Р.</p>
+          </li>
+          <li class="card">
+            <img src="img/item3.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
+            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
+            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <h3>Перфоратор Bosch BFG 2000</h3>
+            <p class="old-price"></p>
+            <p class="price">12500 Р.</p>
+          </li>
+        </ul>
       </section>
 
       <section class="popular-manufacturers">
@@ -65,7 +100,7 @@
       <section class="services">
         <h2>Сервисы</h2>
       </section>
-      
+
       <section>
         <h2>Компания «Техномарт»</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
