--- a/catalog.html
+++ b/catalog.html
@@ -48,6 +48,7 @@
             <li><a href="#">Инструмент </a></li>
             <li>Перфораторы</li>
         </ul>
+
     <form action="catalog.html" method="get">
         <fieldset>
             <legend>Производители</legend>
@@ -140,6 +141,17 @@
                 <p class="price">15500 Р.</p>
             </li>
         </ul>
+        <ul class="pagination">
+            <li><a href="#">Предыдущая</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">Следующая</a></li>
+        </ul>
+    </section>
+    <section class="a-few-words-about-perforators">
+        <h2>Пара слов о перфораторах</h2>
+        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
 </main>
 
