--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
         <ul>
           <li class="card">
             <img src="img/item4.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
-            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <a href="#" class="add-to-cart">Купить</a>
+            <a href="#" class="add-to-favorites">В закладки</a>
             <h3>Перфоратор Bosch BFG 9000</h3>
             <p class="old-price">32500 Р.</p>
             <p class="price">25500 Р.</p>
           </li>
           <li class="card">
             <img src="img/item1.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
-            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <a href="#" class="add-to-cart">Купить</a>
+            <a href="#" class="add-to-favorites">В закладки</a>
             <h3>Перфоратор Bosch BFG 3000</h3>
             <p class="old-price">22500 Р.</p>
             <p class="price">15500 Р.</p>
           </li>
           <li class="card">
             <img src="img/item2.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
-            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <a href="#" class="add-to-cart">Купить</a>
+            <a href="#" class="add-to-favorites">В закладки</a>
             <h3>Перфоратор Bosch BFG 6000</h3>
             <p class="old-price">30500 Р.</p>
             <p class="price">25500 Р.</p>
           </li>
           <li class="card">
             <img src="img/item3.jpg" class="product-item-pic" alt="product picture" width="218" height="170">
-            <p class="add-to-cart"><a href="#" class="add-to-cart">Купить</a></p>
-            <p class="add-to-favorites"><a href="#" class="add-to-favorites">В закладки</a></p>
+            <a href="#" class="add-to-cart">Купить</a>
+            <a href="#" class="add-to-favorites">В закладки</a>
             <h3>Перфоратор Bosch BFG 2000</h3>
             <p class="old-price"></p>
             <p class="price">12500 Р.</p>
