--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
-        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="47"></a>
+        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="47"></a>
         <form action="catalog.html" method="get">
             <label for="search-field">Поиск</label>
             <input type="search" name="search" id="search-field">
@@ -156,7 +156,7 @@
 </main>
 
 <footer>
-    <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="technomart logo" width="220" height="68"></a>
+    <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="68"></a>
     <ul class="main-menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
